--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
-    "name": "chevere/%repoName%",
-    "description": "A chevere %repoName% package",
+    "name": "chevere/danky",
+    "description": "Static site generator (SSG) and templating system",
     "homepage": "https://chevere.org",
     "type": "library",
     "license": "Apache-2.0",
@@ -12,18 +12,19 @@
         }
     ],
     "require": {
-        "chevere/chevere": "^0.7"
+        "chevere/chevere": "^0.7",
+        "chevere/workflow": "^0.2",
+        "chevere/throwable-handler": "^0.3"
     },
     "require-dev": {
+        "chevere/var-dump": "^0.2",
         "phpunit/phpunit": "^9.5",
         "symplify/easy-coding-standard": "^9.4"
     },
     "autoload": {
-        "files": [
-            "src/functions.php"
-        ],
+        "files": ["src/functions.php"],
         "psr-4": {
-            "Chevere\\%namespace%\\": "src/"
+            "Chevere\\Danky\\": "src/"
         }
     },
     "autoload-dev": {
