--- a/.gitattributes
+++ b/.gitattributes
@@ -1,12 +1,13 @@
 /.ecs export-ignore
-/.github export-ignore
-/.vscode export-ignore
-/tests export-ignore
 /.gitattributes export-ignore
+/.github export-ignore
 /.gitignore export-ignore
+/.vscode export-ignore
 /phpunit-report.xml export-ignore
 /phpunit.xml export-ignore
 /rector.php export-ignore
 /sonar-project.properties export-ignore
+/tests export-ignore
+/demo export-ignore
 
 *.php diff=php
