--- a/composer.json
+++ b/composer.json
@@ -12,10 +12,10 @@
         }
     ],
     "require": {
-        "chevere/chevere": "^1.0"
+        "chevere/chevere": "^2.0"
     },
     "require-dev": {
-        "phpstan/phpstan": "^1.5",
+        "phpstan/phpstan": "^1.9",
         "phpunit/phpunit": "^9.5",
         "symplify/easy-coding-standard": "^11.1"
     },
@@ -35,11 +35,22 @@
         "sort-packages": true
     },
     "scripts": {
+        "all": [
+            "composer phpstan",
+            "composer test",
+            "composer test-rep",
+            "composer infection"
+        ],
+        "infection": "infection --only-covered -j10",
+        "phpstan": "vendor/bin/phpstan analyze src/ --memory-limit 512M --level 9",
         "test": "vendor/bin/phpunit -c phpunit.xml",
         "test-rep": "vendor/bin/phpunit -c phpunit-report.xml",
         "update-cs": "mkdir -p .ecs && cd .ecs && curl -O https://raw.githubusercontent.com/chevere/code-style/main/.ecs/ecs-chevere.php"
     },
     "scripts-descriptions": {
+        "all": "Runs all checks",
+        "infection": "Runs infection",
+        "phpstan": "Runs phpstan",
         "test": "Run test suite",
         "test-rep": "Run test suite (report)",
         "update-cs": "Update Chevere code style definition"
